2006-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man4/tcap-tpi.4.man: added missing manpage
	* doc/man/man4/sua-mgmt.4.man: added missing manpage
	* src/modules/inet/lis.conf: removed, needs configure input
	* src/modules/inet/lis.conf.in: added, replacement for lis.conf
	* configure.ac: added src/modules/inet/lis.conf.in to config files
	* doc/man/man4/slm.4.man: added missing manpage
	* doc/man/man4/sdlm-lm.4.man: added missing manpage
	* doc/man/Makefile.am: added missing manpages
	* src/modules/h225/h225.c: updated splash and headers
	* src/modules/isdn/isdn.c: updated splash and headers
	* src/modules/isup/isup.c: updated splash and headers
	* src/modules/m2tp/m2tp.c: updated splash and headers
	* src/modules/m2ua/m2ua.c: updated splash and headers
	* src/modules/m3ua/m3ua.c: updated splash and headers
	* src/modules/mg/mg.c: updated splash and headers
	* src/modules/mtp/mtp.c: updated splash and headers
	* src/modules/mtp/mtp_npi.c: updated splash and headers
	* src/modules/mtp/mtp_tpi.c: updated splash and headers
	* src/modules/mx/mx_sdl.c: updated splash and headers
	* src/modules/sccp/sccp.c: updated splash and headers
	* src/modules/sctp/sctp.c: updated splash and headers
	* src/modules/sdl/cdi_mod.c: updated splash and headers
	* src/modules/sl/sl.c: updated splash and headers
	* src/modules/sl/sl_mux.c: updated splash and headers
	* src/modules/sl/sm_mod.c: updated splash and headers
	* src/modules/ss7sctp/sdl_sctp.c: updated splash and headers
	* src/modules/ss7sctp/sdt_sctp.c: updated splash and headers
	* src/modules/sscop/sscop_ip.c: updated splash and headers
	* src/modules/sscop/sscop.c: updated splash and headers
	* src/modules/sscop/sscop2.c: updated splash and headers
	* src/modules/sscop/sscop_n.c: updated splash and headers
	* src/modules/sscop/sscop_n2.c: updated splash and headers
	* src/modules/sscop/sscop_t.c: updated splash and headers
	* src/modules/sua/sua.c: updated splash and headers