@@ -1,6 +1,6 @@
 # =============================================================================
 # 
-# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.64 $) $Date: 2006/03/07 01:04:06 $
+# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.65 $) $Date: 2006/03/07 13:16:56 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,11 +45,14 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/03/07 01:04:06 $ by $Author: brian $
+# Last Modified $Date: 2006/03/07 13:16:56 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: Makefile.am,v $
+# Revision 0.9.2.65  2006/03/07 13:16:56  brian
+# - tools must be compiled static for distcheck
+#
 # Revision 0.9.2.64  2006/03/07 01:04:06  brian
 # - removed conflicting perftest
 #
@@ -124,97 +127,116 @@ sbin_PROGRAMS			= \
 @PACKAGE_TARNAME@_mknod_CFLAGS		= $(USER_CFLAGS)
 
 test_tcpc_SOURCES		= src/test/inet/test-tcpc.c
-test_tcpc_LDFLAGS		= $(STREAMS_LDADD)
+test_tcpc_LDADD			= $(STREAMS_LDADD)
+test_tcpc_LDFLAGS		= -static
 test_tcpc_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_tcpc_CFLAGS		= $(USER_CFLAGS)
 
 test_tcps_SOURCES		= src/test/inet/test-tcps.c
-test_tcps_LDFLAGS		= $(STREAMS_LDADD)
+test_tcps_LDADD			= $(STREAMS_LDADD)
+test_tcps_LDFLAGS		= -static
 test_tcps_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_tcps_CFLAGS		= $(USER_CFLAGS)
 
 test_udpc_SOURCES		= src/test/inet/test-udpc.c
-test_udpc_LDFLAGS		= $(STREAMS_LDADD)
+test_udpc_LDADD			= $(STREAMS_LDADD)
+test_udpc_LDFLAGS		= -static
 test_udpc_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_udpc_CFLAGS		= $(USER_CFLAGS)
 
 test_udps_SOURCES		= src/test/inet/test-udps.c
-test_udps_LDFLAGS		= $(STREAMS_LDADD)
+test_udps_LDADD			= $(STREAMS_LDADD)
+test_udps_LDFLAGS		= -static
 test_udps_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_udps_CFLAGS		= $(USER_CFLAGS)
 
 #test_q784_SOURCES		= src/test/isup/test-q784.c
-#test_q784_LDFLAGS		= $(STREAMS_LDADD)
+#test_q784_LDADD    		= $(STREAMS_LDADD)
+#test_q784_LDFLAGS		= -static
 #test_q784_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_q784_CFLAGS		= $(USER_CFLAGS)
 
 test_m2pa_SOURCES		= src/test/m2pa/test-m2pa.c
-test_m2pa_LDFLAGS		= $(STREAMS_LDADD)
+test_m2pa_LDADD			= $(STREAMS_LDADD)
+test_m2pa_LDFLAGS		= -static
 test_m2pa_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_m2pa_CFLAGS		= $(USER_CFLAGS)
 
 #perftest_SOURCES		= src/test/perftest.c
-#perftest_LDFLAGS		= $(STREAMS_LDADD)
+#perftest_LDADD			= $(STREAMS_LDADD)
+#perftest_LDFLAGS		= -static
 #perftest_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #perftest_CFLAGS		= $(USER_CFLAGS)
 
 test_q781_SOURCES		= src/test/sl/test-q781.c
-test_q781_LDFLAGS		= $(STREAMS_LDADD)
+test_q781_LDADD			= $(STREAMS_LDADD)
+test_q781_LDFLAGS		= -static
 test_q781_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_q781_CFLAGS		= $(USER_CFLAGS)
 
 #test_q781_pipe_SOURCES		= src/test/sl/test-q781-pipe.c
-#test_q781_pipe_LDFLAGS		= $(STREAMS_LDADD)
+#test_q781_pipe_LDADD		= $(STREAMS_LDADD)
+#test_q781_pipe_LDFLAGS		= -static
 #test_q781_pipe_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_q781_pipe_CFLAGS		= $(USER_CFLAGS)
 
 test_x100p_SOURCES		= src/test/x400p-ss7/test-x100p.c
-test_x100p_LDFLAGS		= $(STREAMS_LDADD)
+test_x100p_LDADD		= $(STREAMS_LDADD)
+test_x100p_LDFLAGS		= -static
 test_x100p_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x100p_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_SOURCES		= src/test/x400p-ss7/test-x400p.c
-test_x400p_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_LDADD		= $(STREAMS_LDADD)
+test_x400p_LDFLAGS		= -static
 test_x400p_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_cap2_SOURCES	= src/test/x400p-ss7/test-x400p-cap2.c
-#test_x400p_cap2_LDFLAGS	= $(STREAMS_LDADD)
+#test_x400p_cap2_LDADD		= $(STREAMS_LDADD)
+#test_x400p_cap2_LDFLAGS	= -static
 #test_x400p_cap2_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_cap2_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_cap_SOURCES		= src/test/x400p-ss7/test-x400p-cap.c
-#test_x400p_cap_LDFLAGS		= $(STREAMS_LDADD)
+#test_x400p_cap_LDADD		= $(STREAMS_LDADD)
+#test_x400p_cap_LDFLAGS		= -static
 #test_x400p_cap_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_cap_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_hsl_SOURCES		= src/test/x400p-ss7/test-x400p-hsl.c
-#test_x400p_hsl_LDFLAGS		= $(STREAMS_LDADD)
+#test_x400p_hsl_LDADD		= $(STREAMS_LDADD)
+#test_x400p_hsl_LDFLAGS		= -static
 #test_x400p_hsl_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_hsl_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_perf_SOURCES	= src/test/x400p-ss7/test-x400p-perf.c
-#test_x400p_perf_LDFLAGS	= $(STREAMS_LDADD)
+#test_x400p_perf_LDADD		= $(STREAMS_LDADD)
+#test_x400p_perf_LDFLAGS	= -static
 #test_x400p_perf_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_perf_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_sdl_SOURCES		= src/test/x400p-ss7/test-x400p-sdl.c
-#test_x400p_sdl_LDFLAGS		= $(STREAMS_LDADD)
+#test_x400p_sdl_LDADD		= $(STREAMS_LDADD)
+#test_x400p_sdl_LDFLAGS		= -static
 #test_x400p_sdl_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_sdl_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_sdt2_SOURCES	= src/test/x400p-ss7/test-x400p-sdt2.c
-#test_x400p_sdt2_LDFLAGS	= $(STREAMS_LDADD)
+#test_x400p_sdt2_LDADD		= $(STREAMS_LDADD)
+#test_x400p_sdt2_LDFLAGS	= -static
 #test_x400p_sdt2_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_sdt2_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_sdt_SOURCES		= src/test/x400p-ss7/test-x400p-sdt.c
-#test_x400p_sdt_LDFLAGS		= $(STREAMS_LDADD)
+#test_x400p_sdt_LDADD		= $(STREAMS_LDADD)
+#test_x400p_sdt_LDFLAGS		= -static
 #test_x400p_sdt_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_sdt_CFLAGS		= $(USER_CFLAGS)
 
 #test_x400p_sl_SOURCES		= src/test/x400p-ss7/test-x400p-sl.c
-#test_x400p_sl_LDFLAGS		= $(STREAMS_LDADD)
+#test_x400p_sl_LDADD		= $(STREAMS_LDADD)
+#test_x400p_sl_LDFLAGS		= -static
 #test_x400p_sl_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 #test_x400p_sl_CFLAGS		= $(USER_CFLAGS)
 
@@ -381,97 +403,116 @@ sbin_PROGRAMS			= \
 @PACKAGE_TARNAME@_mknod_CFLAGS		= $(USER_CFLAGS)
 
 test_tcpc_SOURCES		= src/test/inet/test-tcpc.c
-test_tcpc_LDFLAGS		= $(STREAMS_LDADD)
+test_tcpc_LDADD			= $(STREAMS_LDADD)
+test_tcpc_LDFLAGS		= -static
 test_tcpc_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_tcpc_CFLAGS		= $(USER_CFLAGS)
 
 test_tcps_SOURCES		= src/test/inet/test-tcps.c
-test_tcps_LDFLAGS		= $(STREAMS_LDADD)
+test_tcps_LDADD			= $(STREAMS_LDADD)
+test_tcps_LDFLAGS		= -static
 test_tcps_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_tcps_CFLAGS		= $(USER_CFLAGS)
 
 test_udpc_SOURCES		= src/test/inet/test-udpc.c
-test_udpc_LDFLAGS		= $(STREAMS_LDADD)
+test_udpc_LDADD			= $(STREAMS_LDADD)
+test_udpc_LDFLAGS		= -static
 test_udpc_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_udpc_CFLAGS		= $(USER_CFLAGS)
 
 test_udps_SOURCES		= src/test/inet/test-udps.c
-test_udps_LDFLAGS		= $(STREAMS_LDADD)
+test_udps_LDADD			= $(STREAMS_LDADD)
+test_udps_LDFLAGS		= -static
 test_udps_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_udps_CFLAGS		= $(USER_CFLAGS)
 
 test_q784_SOURCES		= src/test/isup/test-q784.c
-test_q784_LDFLAGS		= $(STREAMS_LDADD)
+test_q784_LDADD			= $(STREAMS_LDADD)
+test_q784_LDFLAGS		= -static
 test_q784_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_q784_CFLAGS		= $(USER_CFLAGS)
 
 test_m2pa_SOURCES		= src/test/m2pa/test-m2pa.c
-test_m2pa_LDFLAGS		= $(STREAMS_LDADD)
+test_m2pa_LDADD			= $(STREAMS_LDADD)
+test_m2pa_LDFLAGS		= -static
 test_m2pa_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_m2pa_CFLAGS		= $(USER_CFLAGS)
 
 #perftest_SOURCES		= src/test/perftest.c
-#perftest_LDFLAGS		= $(STREAMS_LDADD)
+#perftest_LDADD			= $(STREAMS_LDADD)
+#perftest_LDFLAGS		= -static
 #perftest_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
-#perftest_CFLAGS			= $(USER_CFLAGS)
+#perftest_CFLAGS		= $(USER_CFLAGS)
 
 test_q781_SOURCES		= src/test/sl/test-q781.c
-test_q781_LDFLAGS		= $(STREAMS_LDADD)
+test_q781_LDADD			= $(STREAMS_LDADD)
+test_q781_LDFLAGS		= -static
 test_q781_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_q781_CFLAGS		= $(USER_CFLAGS)
 
 test_q781_pipe_SOURCES		= src/test/sl/test-q781-pipe.c
-test_q781_pipe_LDFLAGS		= $(STREAMS_LDADD)
+test_q781_pipe_LDADD		= $(STREAMS_LDADD)
+test_q781_pipe_LDFLAGS		= -static
 test_q781_pipe_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_q781_pipe_CFLAGS		= $(USER_CFLAGS)
 
 test_x100p_SOURCES		= src/test/x400p-ss7/test-x100p.c
-test_x100p_LDFLAGS		= $(STREAMS_LDADD)
+test_x100p_LDADD		= $(STREAMS_LDADD)
+test_x100p_LDFLAGS		= -static
 test_x100p_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x100p_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_SOURCES		= src/test/x400p-ss7/test-x400p.c
-test_x400p_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_LDADD		= $(STREAMS_LDADD)
+test_x400p_LDFLAGS		= -static
 test_x400p_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_cap2_SOURCES		= src/test/x400p-ss7/test-x400p-cap2.c
-test_x400p_cap2_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_cap2_LDADD		= $(STREAMS_LDADD)
+test_x400p_cap2_LDFLAGS		= -static
 test_x400p_cap2_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_cap2_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_cap_SOURCES		= src/test/x400p-ss7/test-x400p-cap.c
-test_x400p_cap_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_cap_LDADD		= $(STREAMS_LDADD)
+test_x400p_cap_LDFLAGS		= -static
 test_x400p_cap_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_cap_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_hsl_SOURCES		= src/test/x400p-ss7/test-x400p-hsl.c
-test_x400p_hsl_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_hsl_LDADD		= $(STREAMS_LDADD)
+test_x400p_hsl_LDFLAGS		= -static
 test_x400p_hsl_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_hsl_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_perf_SOURCES		= src/test/x400p-ss7/test-x400p-perf.c
-test_x400p_perf_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_perf_LDADD		= $(STREAMS_LDADD)
+test_x400p_perf_LDFLAGS		= -static
 test_x400p_perf_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_perf_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_sdl_SOURCES		= src/test/x400p-ss7/test-x400p-sdl.c
-test_x400p_sdl_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_sdl_LDADD		= $(STREAMS_LDADD)
+test_x400p_sdl_LDFLAGS		= -static
 test_x400p_sdl_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_sdl_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_sdt2_SOURCES		= src/test/x400p-ss7/test-x400p-sdt2.c
-test_x400p_sdt2_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_sdt2_LDADD		= $(STREAMS_LDADD)
+test_x400p_sdt2_LDFLAGS		= -static
 test_x400p_sdt2_CPPFLAGS	= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_sdt2_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_sdt_SOURCES		= src/test/x400p-ss7/test-x400p-sdt.c
-test_x400p_sdt_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_sdt_LDADD		= $(STREAMS_LDADD)
+test_x400p_sdt_LDFLAGS		= -static
 test_x400p_sdt_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_sdt_CFLAGS		= $(USER_CFLAGS)
 
 test_x400p_sl_SOURCES		= src/test/x400p-ss7/test-x400p-sl.c
-test_x400p_sl_LDFLAGS		= $(STREAMS_LDADD)
+test_x400p_sl_LDADD		= $(STREAMS_LDADD)
+test_x400p_sl_LDFLAGS		= -static
 test_x400p_sl_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_x400p_sl_CFLAGS		= $(USER_CFLAGS)
 
@@ -761,12 +802,14 @@ if RPM_BUILD_USER
 ## RPM_BUILD_USER
 
 test_timod_SOURCES		= src/test/tli/test-timod.c
-test_timod_LDFLAGS		= $(STREAMS_LDADD) -lxnet
+test_timod_LDADD		= $(STREAMS_LDADD) -lxnet
+test_timod_LDFLAGS		= -static
 test_timod_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_timod_CFLAGS		= $(USER_CFLAGS)
 
 test_tirdwr_SOURCES		= src/test/tli/test-tirdwr.c
-test_tirdwr_LDFLAGS		= $(STREAMS_LDADD) -lxnet
+test_tirdwr_LDADD		= $(STREAMS_LDADD) -lxnet
+test_tirdwr_LDFLAGS		= -static
 test_tirdwr_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_tirdwr_CFLAGS		= $(USER_CFLAGS)
 
@@ -779,27 +822,32 @@ pkglibexec_PROGRAMS		+= \
 endif
 
 test_inet_raw_SOURCES		= src/test/inet/test-inet_raw.c
-test_inet_raw_LDFLAGS		= $(STREAMS_LDADD)
+test_inet_raw_LDADD		= $(STREAMS_LDADD)
+test_inet_raw_LDFLAGS		= -static
 test_inet_raw_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_inet_raw_CFLAGS		= $(USER_CFLAGS)
 
 test_inet_tcp_SOURCES		= src/test/inet/test-inet_tcp.c
-test_inet_tcp_LDFLAGS		= $(STREAMS_LDADD)
+test_inet_tcp_LDADD		= $(STREAMS_LDADD)
+test_inet_tcp_LDFLAGS		= -static
 test_inet_tcp_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_inet_tcp_CFLAGS		= $(USER_CFLAGS)
 
 test_inet_udp_SOURCES		= src/test/inet/test-inet_udp.c
-test_inet_udp_LDFLAGS		= $(STREAMS_LDADD)
+test_inet_udp_LDADD		= $(STREAMS_LDADD)
+test_inet_udp_LDFLAGS		= -static
 test_inet_udp_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_inet_udp_CFLAGS		= $(USER_CFLAGS)
 
 test_xnet_SOURCES		= src/test/xnet/test-xnet.c
-test_xnet_LDFLAGS		= $(STREAMS_LDADD) -lxnet
+test_xnet_LDADD			= $(STREAMS_LDADD) -lxnet
+test_xnet_LDFLAGS		= -static
 test_xnet_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_xnet_CFLAGS		= $(USER_CFLAGS)
 
 test_xnet_thr_SOURCES		= src/test/xnet/test-xnet.c
-test_xnet_thr_LDFLAGS		= $(STREAMS_LDADD) -lpthread -lxnet
+test_xnet_thr_LDADD		= $(STREAMS_LDADD) -lpthread -lxnet
+test_xnet_thr_LDFLAGS		= -static
 test_xnet_thr_CPPFLAGS		= $(PKG_INCLUDES) $(USER_CPPFLAGS)
 test_xnet_thr_CFLAGS		= $(USER_CFLAGS)
 
